<resources>
    <string name="app_name">StockbitTest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_exception_no_internet">No Internet Connection!</string>
    <string name="msg_exception_timeout">Connection Timeout!</string>
    <string name="msg_exception_network_error">Network Error!</string>

    <string name="msg_credit_created">by Afis</string>

    <string name="msg_no_internet">Please reconnect to your Wifi or use your own internet connection</string>
    <string name="title_no_internet">Whoops.. No Internet Connection</string>
    <string name="loading">Loading</string>
    <string name="login_title_separator">Atau</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forget_pass">Lupa Password</string>
    <string name="login">Login</string>
    <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="dont_have_an_account">Belum punya akun?</string>
    <string name="signup_now">Daftar sekarang</string>
</resources>